--- a/square-with-store/package.json
+++ b/square-with-store/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch ./data/squares.json --port 3004"
   },
   "eslintConfig": {
     "extends": [
